# NervaAPI

./: .gitignore  Makefile  README.md  config.example.py  factory.py  launcher.py  pyproject.toml
assets/css/: main.css
assets/js/: main.js
blueprints/analytics/: routes.py
blueprints/daemon/: routes.py
blueprints/index/: routes.py
blueprints/market/: routes.py
templates/: index.html
