[project]
name = "NervaAPI"
version = "1.0.0"
description = "NervaAPI is a Python-based API for the Nerva blockchain. It provides a simple interface to interact with the Nerva blockchain."
license = "GPL-3.0"
authors = [
  { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.10",
    "motor>=3.6.0",
    "nerva-py>=1.0.0",
    "quart-rate-limiter>=0.10.0",
    "quart>=0.19.6",
    "schedule>=1.2.2",
    "validators>=0.34.0",
]

[project.optional-dependencies]
speed = [
    "uvloop>=0.21.0",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=3.5.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 85
target-version = "py313"

[tool.ruff.lint.isort]
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]
